# agent-dock

./: .env.orchestrator  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  codex_wrapper.sh  deno.json  package.json  pyproject.toml  tasks.md
bug_fixes/: 2026-02-09_orchestrator_openai_stabilization.md  README.md
docs/: agent_teams_like_spec.md  thin_orchestrator_spec.md  ts-architecture-blueprint.md  ts-cutover-runbook.md  ts-env-compat-matrix.md  ts-migration-contract.md  ts-parity-gate.md  ts-wrapper-contract.md
examples/: sample_tasks.json
npm/: README.md  codex_wrapper.sh  package.json
npm/task_configs/: add-typescript-runtime-rewrite-plan.json
openspec/: AGENTS.md
personas/default/: implementer.yaml  spec-checker.yaml  spec-code-creator.yaml  spec-planner.yaml  spec-reviewer.yaml
scripts/: build_npm.ts  update_runner.sh
src/cli/: main.ts  main_test.ts
src/domain/: decision.ts  mail.ts  mod.ts  persona.ts  persona_policy_test.ts  spec_creator.ts  task.ts
task_configs/overrides/: README.md  add-openspec-task-config-compiler.yaml
task_configs/spec_creator/: add-run-tasks-md-checkbox-sync.json  add-spec-creator-polish.json
team_orchestrator/: __init__.py  adapter.py  cli.py  codex_adapter.py  codex_consistency.py  models.py  openspec_compiler.py  openspec_template.py  orchestrator.py  persona_catalog.py  persona_pipeline.py  persona_policy.py  provider.py  state_store.py
tests/: test_cli.py  test_codex_consistency.py  test_openspec_compiler.py  test_openspec_template.py  test_orchestrator.py  test_state_store.py
tests/parity/: README.md  (+2 more)
(+180 files in other folders)
